# helmdall-client_archived

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: app.rs  logging.rs  main.rs
src/errors/: api.rs
src/models/: api_comms.rs  audit.rs  config.rs  logger.rs  mod.rs  script_config.rs
src/util/: api.rs  bootstrap.rs  logging.rs  mod.rs  socket_watchdog.rs  watchdog.rs
