[package]
name = "helmdall-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.2"
humantime = "2.1.0"
log = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = {version="1.0.171", features=["std", "derive", "serde_derive"]}
serde_json = "1.0.102"
serde_yaml = "0.9.22"
tokio = { version = "1.29.1", features = ["full"] }
ws = { version = "0.9.2", features = ["ssl"] }
